修改末页图表

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Munu</string>
 
+    <string name="end_activity_eat_count">到\n店\n就\n餐\nnum\n次</string>
+
     <string-array name="jazzy_effects">
         <item>Standard</item>
         <item>Tablet</item>
