添加 小庆广告相关代码

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
         <item>RotateDown</item>
         <item>Accordion</item>
     </string-array>
+
+    <string name="wait_time_text_one">在40分钟内用餐完成可自动获得再次就餐</string>
+    <string name="wait_time_text_two">10元</string>
+    <string name="wait_time_text_three">代金券</string>
+
 </resources>
